# autovid.new

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml
models/: chat_with_pdf_vision.py  chatterbox_tts.py  llama.py  llama2.py  mistral_modal.py  musicgen.py  qwen.py  vllm_inference.py  vllm_llama.py
utils/: aiservice.py
