[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crawl4ai>=0.6.3",
    "google-genai>=1.18.0",
    "google-generativeai>=0.8.5",
    "gradio-client>=1.10.2",
    "gradio[mcp]>=5.32.1",
    "langchain>=0.3.25",
    "modal>=1.0.2",
    "notebook>=7.4.3",
    "pydantic>=2.11.5",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
]
